...
    <string name="general_barcode">Barcode</string>
    <string name="general_permission_required_title">Permission required!</string>
    <string name="general_permission_required_message">Permission is required to complete the task. Without it, it is not possible to use this function.</string>
    <string name="general_choose">Choose</string>
    <!--Title-->
    <string name="title_main_pantry">My pantry</string>
    <string name="title_scan_product">Scan the product\'s code</string>
    <string name="title_new_product">New product</string>
    <string name="title_own_categories">Own product categories</string>
    <string name="title_new_category">New category</string>
    <string name="title_own_category_detail">Own category detail</string>
    <string name="title_storage_locations">Storage locations</string>
    <string name="title_new_storage_location">New storage location</string>
    <string name="title_storage_location_detail">Storage location details</string>
    <string name="title_app_settings">Application settings</string>
    <string name="title_about_author">About the author</string>
    <string name="title_print_qrcodes">Print QR Codes</string>
    <string name="title_product_details">Product details</string>
    <!--Button-->
    <string name="button_save_changes">Save changes</string>
    <string name="button_clear">Clear</string>
    <string name="button_clear_filters">Clear filters</string>
...
    <string name="scan_barcode">Scan the product barcode</string>
    <string name="scan_barcode_manually">Please enter the barcode</string>
    <string name="scan_product_not_found">Product was not found.</string>
    <string name="scan_scanner_hint">Important: The barcode scanner does not search for products that have not been previously added to the application.</string>
    <string name="scan_barcode_is_updated">Barcode has been updated</string>
    <!--settings-->
    <string name="settings_general_settings">General settings</string>
    <string name="settings_notifications_settings">Notifications settings</string>
    <string name="settings_enabled">Enabled</string>
    <string name="settings_disabled">Disabled</string>
    <string name="settings_qr_code_sizes">Size of printed QR code labels</string>
    <string name="settings_which_theme_user_prefer">Choose application mode</string>
    <string name="settings_which_camera_to_scan_products">Camera for scanning QR codes</string>
...
    <string name="settings_restore_storage_location_database">Import storage location database</string>
    <string name="settings_backup_storage_location_database">Export storage location database</string>
    <string name="settings_clear_storage_location_database">Clear storage location database</string>
    <string name="settings_database_backup">Database backup</string>
    <string name="settings_version">Version</string>
    <string name="settings_active_user">Active user</string>
    <string name="settings_go_premium">Switch to Premium Account</string>
    <string name="settings_database_mode">Product database mode</string>
    <string name="settings_qr_code_size_big">Big</string>
    <string name="settings_qr_code_size_small">Small</string>
    <string name="settings_import_local_db_to_cloud">Import database from phone to cloud</string>
    <string name="settings_choose_file_to_restore">Choose database file to restore</string>
    <string-array name="settings_camera_to_scan">
        <item>Rear camera</item>
...
