<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/linkedIn"
        android:layout_width="@dimen/author_social_media"
        android:layout_height="@dimen/author_social_media"
        android:layout_marginTop="32dp"
        android:background="@drawable/linkedin"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="@dimen/author_social_media"
        android:layout_height="@dimen/author_social_media"
        android:background="@drawable/facebook"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linkedIn"
        app:layout_constraintTop_toTopOf="@id/linkedIn" />

    <TextView
        android:id="@+id/contactWithAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/author_contact_with_author"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook" />

    <TextView
        android:id="@+id/myPantryWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/author_website"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactWithAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>