<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hermanowicz.pantry.ui.new_category.NewCategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/button_bottom_padding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/categoryNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/form_category_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="40"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryNameText"
                    tools:ignore="Autofill">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/categoryNameInput"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:text="@={viewModel.categoryName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/dividerAfterCategoryName"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_name" />

                <TextView
                    android:id="@+id/categoryDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/form_category_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dividerAfterCategoryName" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryDescriptionText"
                    tools:ignore="Autofill">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/categoryDescriptionInput"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:text="@={viewModel.categoryDescription}" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/dividerAfterCategoryDescription"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/button_addNewCategory"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:onClick="@{() -> viewModel.onClickAddCategory()}"
            android:text="@string/title_new_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".45" />

        <Button
            android:id="@+id/button_clearFields"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:onClick="@{() -> viewModel.onClickClearFields()}"
            android:text="@string/button_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>