<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.hermanowicz.pantry.ui.scan_product.ScanProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/whatDoYouWantToDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:text="@string/what_do_you_want_to_do"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_scanProductQRCode"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:text="@string/scan_qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/whatDoYouWantToDo" />

        <Button
            android:id="@+id/button_scanProductBarcode"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:text="@string/scan_barcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_scanProductQRCode" />

        <Button
            android:id="@+id/button_enterBarcodeManually"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:text="@string/scan_barcode_manually"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_scanProductBarcode" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>